--- a/index.html
+++ b/index.html
@@ -1,12 +1,13 @@
 <html>
     <head>
         <title>CSCE 190: Aydin Escamilla</title>
+        <link rel="stylesheet" href="styles.css">
     </head>
     <body>
         <h1>Aydin Escamilla</h1>
-        <div class="about"><h2>About me</h2></div>
-        <div class="skills"><h2>Skills</h2></div>
-        <div class="projects"><h2>Highlighted projects</h2></div>
-        <div class="contact"><h2>Contact me</h2></div>
+        <div class=about><h2 class="about">About me</h2></div>
+        <div class="skills"><h2 class="skills">Skills</h2></div>
+        <div class="projects"><h2 class="projects">Highlighted projects</h2></div>
+        <div class="contact"><h2 class="contact">Contact me</h2></div>
     </body>
 </html>
