--- a/index.html
+++ b/index.html
@@ -7,7 +7,15 @@
         <h1>Aydin Escamilla</h1>
         <div class=about><h2 class="about">About me</h2></div>
         <div class="skills"><h2 class="skills">Skills</h2></div>
-        <div class="projects"><h2 class="projects">Highlighted projects</h2></div>
+        <h2 class="projects">Highlighted Projects</h2>
+        <div class="projects">
+            <!--Problem Statement Assignment-->
+            <section class="project">
+                <a href="files/statement.pdf"><h3>Problem Statement</h3></a>
+                <a href="files/statement.pdf"><img src="images/ProblemStatement.png"></a>
+                <p>There is not enough attention being placed on the lack or availability of public transportation to University of South Carolina students who may need it.</p>
+            </section>
+        </div>
         <div class="contact"><h2 class="contact">Contact me</h2></div>
     </body>
 </html>
