--- a/index.html
+++ b/index.html
@@ -12,9 +12,17 @@
             <!--Problem Statement Assignment-->
             <section class="project">
                 <a href="files/statement.pdf"><h3>Problem Statement</h3></a>
-                <a href="files/statement.pdf"><img src="images/ProblemStatement.png"></a>
+                <a href="files/statement.pdf"><img src="images/ProblemStatement.png" width="300" height="300"></a>
                 <p>There is not enough attention being placed on the lack or availability of public transportation to University of South Carolina students who may need it.</p>
             </section>
+            
+            <!--Affinity Diagram Assignment-->
+            <section class="project">
+                <a href="files/Affinity_DOC.pdf"><h3>Affinity Diagram</h3></a>
+                <a href="files/Affinity_DOC.pdf"><img src="images/Affinity_IMG.png" width="300" height="300"></a>
+                <p>Above is an affinity diagram created for the sake of developing a solution to my problem statement. It includes a section for outreach, sustainability, needs, barriers, and deliverables, all of which then have snippets of possibilities pertaining to their headings.</p>
+            </section>
+
         </div>
         <div class="contact"><h2 class="contact">Contact me</h2></div>
     </body>
